finished drawing the numbers so all we need is medals now!!!!!!!!!!!